--- a/kmouthui.rc
+++ b/kmouthui.rc
@@ -13,7 +13,7 @@
   <Menu name="edit"><text>&amp;Edit</text>
     <Action name="edit_speak"/>
   </Menu>
-  <Menu name="phrasebooks"><text>&amp;Phrase books</text>
+  <Menu name="phrasebooks"><text>&amp;Phrase Books</text>
     <Action name="phrasebook_edit"/>
   </Menu>
   <Menu name="settings"><text>&amp;Settings</text>
