Renamed .stdbook files to .desktop files and added extended versions of the standard phrasebooks
svn path=/trunk/kdeaccessibility/kmouth/; revision=200862

--- a/books/Makefile.am
+++ b/books/Makefile.am
@@ -1,34 +1,56 @@
-####### kdevelop will overwrite this part!!! (begin)##########
-
-
-EXTRA_DIST = de-greetings.phrasebook de-greetings.stdbook de-meals.phrasebook de-meals.stdbook en-greetings.phrasebook en-greetings.stdbook en-meals.phrasebook en-meals.stdbook 
+EXTRA_DIST = de-courteousness.phrasebook de-courteousness.desktop \
+             de-greetings.phrasebook     de-greetings.desktop \
+             de-howareyou.phrasebook     de-howareyou.desktop \
+             de-meals.phrasebook         de-meals.desktop \
+             de-personal.phrasebook      de-personal.desktop \
+             en-courteousness.phrasebook en-courteousness.desktop \
+             en-greetings.phrasebook     en-greetings.desktop \
+             en-howareyou.phrasebook     en-howareyou.desktop \
+             en-meals.phrasebook         en-meals.desktop \
+             en-personal.phrasebook      en-personal.desktop
 
 install-data-local:
 	$(mkinstalldirs) $(kde_datadir)/kmouth/books/de/
+	$(INSTALL_DATA) $(srcdir)/de-courteousness.phrasebook $(kde_datadir)/kmouth/books/de/courteousness.phrasebook
+	$(INSTALL_DATA) $(srcdir)/de-courteousness.desktop $(kde_datadir)/kmouth/books/de/courteousness.desktop
 	$(INSTALL_DATA) $(srcdir)/de-greetings.phrasebook $(kde_datadir)/kmouth/books/de/greetings.phrasebook
-	$(mkinstalldirs) $(kde_datadir)/kmouth/books/de/
-	$(INSTALL_DATA) $(srcdir)/de-greetings.stdbook $(kde_datadir)/kmouth/books/de/greetings.stdbook
-	$(mkinstalldirs) $(kde_datadir)/kmouth/books/de/
+	$(INSTALL_DATA) $(srcdir)/de-greetings.desktop $(kde_datadir)/kmouth/books/de/greetings.desktop
+	$(INSTALL_DATA) $(srcdir)/de-howareyou.phrasebook $(kde_datadir)/kmouth/books/de/howareyou.phrasebook
+	$(INSTALL_DATA) $(srcdir)/de-howareyou.desktop $(kde_datadir)/kmouth/books/de/howareyou.desktop
 	$(INSTALL_DATA) $(srcdir)/de-meals.phrasebook $(kde_datadir)/kmouth/books/de/meals.phrasebook
-	$(mkinstalldirs) $(kde_datadir)/kmouth/books/de/
-	$(INSTALL_DATA) $(srcdir)/de-meals.stdbook $(kde_datadir)/kmouth/books/de/meals.stdbook
+	$(INSTALL_DATA) $(srcdir)/de-meals.desktop $(kde_datadir)/kmouth/books/de/meals.desktop
+	$(INSTALL_DATA) $(srcdir)/de-personal.phrasebook $(kde_datadir)/kmouth/books/de/personal.phrasebook
+	$(INSTALL_DATA) $(srcdir)/de-personal.desktop $(kde_datadir)/kmouth/books/de/personal.desktop
 	$(mkinstalldirs) $(kde_datadir)/kmouth/books/en/
+	$(INSTALL_DATA) $(srcdir)/en-courteousness.phrasebook $(kde_datadir)/kmouth/books/en/courteousness.phrasebook
+	$(INSTALL_DATA) $(srcdir)/en-courteousness.desktop $(kde_datadir)/kmouth/books/en/courteousness.desktop
 	$(INSTALL_DATA) $(srcdir)/en-greetings.phrasebook $(kde_datadir)/kmouth/books/en/greetings.phrasebook
-	$(mkinstalldirs) $(kde_datadir)/kmouth/books/en/
-	$(INSTALL_DATA) $(srcdir)/en-greetings.stdbook $(kde_datadir)/kmouth/books/en/greetings.stdbook
-	$(mkinstalldirs) $(kde_datadir)/kmouth/books/en/
+	$(INSTALL_DATA) $(srcdir)/en-greetings.desktop $(kde_datadir)/kmouth/books/en/greetings.desktop
+	$(INSTALL_DATA) $(srcdir)/en-howareyou.phrasebook $(kde_datadir)/kmouth/books/en/howareyou.phrasebook
+	$(INSTALL_DATA) $(srcdir)/en-howareyou.desktop $(kde_datadir)/kmouth/books/en/howareyou.desktop
 	$(INSTALL_DATA) $(srcdir)/en-meals.phrasebook $(kde_datadir)/kmouth/books/en/meals.phrasebook
-	$(mkinstalldirs) $(kde_datadir)/kmouth/books/en/
-	$(INSTALL_DATA) $(srcdir)/en-meals.stdbook $(kde_datadir)/kmouth/books/en/meals.stdbook
+	$(INSTALL_DATA) $(srcdir)/en-meals.desktop $(kde_datadir)/kmouth/books/en/meals.desktop
+	$(INSTALL_DATA) $(srcdir)/en-personal.phrasebook $(kde_datadir)/kmouth/books/en/personal.phrasebook
+	$(INSTALL_DATA) $(srcdir)/en-personal.desktop $(kde_datadir)/kmouth/books/en/personal.desktop
 
 uninstall-local:
+	-rm -f $(kde_datadir)/kmouth/books/de/courteousness.phrasebook
+	-rm -f $(kde_datadir)/kmouth/books/de/courteousness.desktop
 	-rm -f $(kde_datadir)/kmouth/books/de/greetings.phrasebook
-	-rm -f $(kde_datadir)/kmouth/books/de/greetings.stdbook
+	-rm -f $(kde_datadir)/kmouth/books/de/greetings.desktop
+	-rm -f $(kde_datadir)/kmouth/books/de/howareyou.phrasebook
+	-rm -f $(kde_datadir)/kmouth/books/de/howareyou.desktop
 	-rm -f $(kde_datadir)/kmouth/books/de/meals.phrasebook
-	-rm -f $(kde_datadir)/kmouth/books/de/meals.stdbook
+	-rm -f $(kde_datadir)/kmouth/books/de/meals.desktop
+	-rm -f $(kde_datadir)/kmouth/books/de/personal.phrasebook
+	-rm -f $(kde_datadir)/kmouth/books/de/personal.desktop
+	-rm -f $(kde_datadir)/kmouth/books/en/courteousness.phrasebook
+	-rm -f $(kde_datadir)/kmouth/books/en/courteousness.desktop
 	-rm -f $(kde_datadir)/kmouth/books/en/greetings.phrasebook
-	-rm -f $(kde_datadir)/kmouth/books/en/greetings.stdbook
+	-rm -f $(kde_datadir)/kmouth/books/en/greetings.desktop
+	-rm -f $(kde_datadir)/kmouth/books/en/howareyou.phrasebook
+	-rm -f $(kde_datadir)/kmouth/books/en/howareyou.desktop
 	-rm -f $(kde_datadir)/kmouth/books/en/meals.phrasebook
-	-rm -f $(kde_datadir)/kmouth/books/en/meals.stdbook
-
-####### kdevelop will overwrite this part!!! (end)############
+	-rm -f $(kde_datadir)/kmouth/books/en/meals.desktop
+	-rm -f $(kde_datadir)/kmouth/books/en/personal.phrasebook
+	-rm -f $(kde_datadir)/kmouth/books/en/personal.desktop
