--- a/books/en-meals.desktop
+++ b/books/en-meals.desktop
@@ -1,6 +1,6 @@
 [Standard Phrasebook]
 Name=Meals
 Name[de]=Mahlzeiten
-File=en/meals.phrasebook
+File=de/meals.phrasebook
 Path=English
 Path[de]=Englisch
