CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=205043

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -1,2 +1,63 @@
 [Desktop Entry]
 Name=German
+Name[af]=Duits
+Name[ar]=الألمانية
+Name[az]=Almanca
+Name[be]=Нямецкая
+Name[bg]=Немски
+Name[br]=Alamaneg
+Name[bs]=Njemački
+Name[ca]=Alemany
+Name[cs]=Německý
+Name[da]=Tysk
+Name[de]=Deutsch
+Name[el]=Γερμανικά
+Name[eo]=Germana
+Name[et]=Saksa
+Name[eu]=Alemaniera
+Name[fa]=آلمانی
+Name[fi]=Saksa
+Name[fo]=Týskt
+Name[fr]=Allemand
+Name[ga]=Gearmáinis
+Name[gl]=Alemán
+Name[he]=גרמנית
+Name[hr]=Njemački
+Name[hu]=német
+Name[id]=Jerman
+Name[is]=ÃÃ½ska
+Name[it]=Tedesco
+Name[ja]=ドイツ語
+Name[ko]=독일어
+Name[lt]=Vokiečių
+Name[lv]=Vācu
+Name[mi]=Reo Tiamana
+Name[mk]=Германски
+Name[mn]=Герман
+Name[mt]=Ġermaniż
+Name[nb]=Tysk
+Name[nl]=Duits
+Name[nn]=Tysk
+Name[nso]=Se-German
+Name[oc]=Alemani
+Name[pl]=Niemiecki
+Name[pt]=Alemão
+Name[pt_BR]=Alemão
+Name[ro]=Germană
+Name[ru]=Немецкий
+Name[se]=Duiskkagiella
+Name[sk]=Nemecký
+Name[sl]=nemško
+Name[sr]=Nemački
+Name[ss]=SiJalimane
+Name[sv]=Tyska
+Name[ta]=§º÷Áý
+Name[th]=เยอรมัน
+Name[tr]=Almanca
+Name[uk]=Німецька
+Name[ven]=Mudzhemeni
+Name[vi]=Tiếng Đức 
+Name[wa]=Almand
+Name[zh_CN]=德语
+Name[zh_TW]=德語
+Name[zu]=isi-Jalimani
