move the app icons into an app folder so they get installed separately from the actions.
Move the actions into the share/apps/kmouth/icons/<size>/action/ folder
to make it KDE-compliant and no application icons mess up the kde system icons

svn path=/trunk/kdeaccessibility/kmouth/; revision=208829

--- a/icons/history/Makefile.am
+++ b/icons/history/Makefile.am
@@ -3,35 +3,7 @@
 
 EXTRA_DIST = hi16-action-phrasehistory_open.png hi16-action-phrasehistory_print.png hi16-action-phrasehistory_save.png hi22-action-phrasehistory_open.png hi22-action-phrasehistory_print.png hi22-action-phrasehistory_save.png hi32-action-phrasehistory_open.png hi32-action-phrasehistory_print.png hi32-action-phrasehistory_save.png 
 
-install-data-local:
-	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
-	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasehistory_open.png $(kde_icondir)/hicolor/16x16/actions/phrasehistory_open.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
-	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasehistory_print.png $(kde_icondir)/hicolor/16x16/actions/phrasehistory_print.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
-	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasehistory_save.png $(kde_icondir)/hicolor/16x16/actions/phrasehistory_save.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
-	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasehistory_open.png $(kde_icondir)/hicolor/22x22/actions/phrasehistory_open.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
-	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasehistory_print.png $(kde_icondir)/hicolor/22x22/actions/phrasehistory_print.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
-	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasehistory_save.png $(kde_icondir)/hicolor/22x22/actions/phrasehistory_save.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
-	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasehistory_open.png $(kde_icondir)/hicolor/32x32/actions/phrasehistory_open.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
-	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasehistory_print.png $(kde_icondir)/hicolor/32x32/actions/phrasehistory_print.png
-	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
-	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasehistory_save.png $(kde_icondir)/hicolor/32x32/actions/phrasehistory_save.png
-
-uninstall-local:
-	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasehistory_open.png
-	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasehistory_print.png
-	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasehistory_save.png
-	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasehistory_open.png
-	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasehistory_print.png
-	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasehistory_save.png
-	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasehistory_open.png
-	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasehistory_print.png
-	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasehistory_save.png
-
 ####### kdevelop will overwrite this part!!! (end)############
+
+kmouthiconsdir = $(kde_datadir)/kmouth/icons
+kmouthicons_ICON = AUTO
