CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=211208

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -13,6 +13,7 @@ Name[da]=Tysk
 Name[de]=Deutsch
 Name[el]=Γερμανικά
 Name[eo]=Germana
+Name[es]=Alemán
 Name[et]=Saksa
 Name[eu]=Alemaniera
 Name[fa]=آلمانی
@@ -23,7 +24,7 @@ Name[ga]=Gearmáinis
 Name[gl]=Alemán
 Name[he]=גרמנית
 Name[hr]=Njemački
-Name[hu]=német
+Name[hu]=Német
 Name[id]=Jerman
 Name[is]=ÃÃ½ska
 Name[it]=Tedesco
