--- a/books/en.desktop
+++ b/books/en.desktop
@@ -1,3 +1,10 @@
 # KDE Config File  
 [Desktop Entry]
 Name=English
+Name[da]=Engelsk
+Name[de]=Englisch
+Name[es]=Inglés
+Name[he]=אנגלית
+Name[hu]=Angol
+Name[pt]=Inglês
+Name[pt_BR]=Inglês
