CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=215200

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -26,7 +26,7 @@ Name[he]=גרמנית
 Name[hr]=Njemački
 Name[hu]=Német
 Name[id]=Jerman
-Name[is]=ÃÃ½ska
+Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
 Name[ko]=독일어
