CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=215542

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -4,6 +4,7 @@ Name=English
 Name[da]=Engelsk
 Name[de]=Englisch
 Name[es]=Inglés
+Name[fr]=Anglais
 Name[he]=אנגלית
 Name[hu]=Angol
 Name[pt]=Inglês
