--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ rcdir = $(kde_datadir)/kmouth
 rc_DATA = kmouthui.rc
 
 messages: rc.cpp
+	$(EXTRACTRC) *.rc *.ui */*.ui >> ./rc.cpp
 	LIST=`find . -name \*.h -o -name \*.hh -o -name \*.H -o -name \*.hxx -o -name \*.hpp -o -name \*.cpp -o -name \*.cc -o -name \*.cxx -o -name \*.ecpp -o -name \*.C`; \
 	if test -n "$$LIST"; then \
 	 $(XGETTEXT) $$LIST -o $(podir)/kmouth.pot; \
