--- a/wordcompletion/Makefile.am
+++ b/wordcompletion/Makefile.am
@@ -4,6 +4,10 @@ INCLUDES = $(all_includes)
 
 libwordcompletion_a_METASOURCES = AUTO
 
-libwordcompletion_a_SOURCES = wordlistui.ui wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp
+libwordcompletion_a_SOURCES = wordcompletionui.ui creationsourceui.ui creationsourcedetailsui.ui kdedocsourceui.ui \
+                 wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp dictionarycreationwizard.cpp klanguagebutton.cpp klanguagebuttonhelper.cpp
 
-EXTRA_DIST = wordlistui.ui wordlist.cpp wordlist.h wordcompletion.cpp wordcompletion.h wordcompletionwidget.cpp wordcompletionwidget.h
+EXTRA_DIST = wordcompletionui.ui creationsourceui.ui creationsourcedetailsui.ui kdedocsourceui.ui \
+                 creationsourceui.ui.h creationsourcedetailsui.ui.h kdedocsourceui.ui.h \
+                 wordlist.cpp wordcompletion.cpp wordcompletionwidget.cpp dictionarycreationwizard.cpp klanguagebutton.cpp klanguagebuttonhelper.cpp \
+                 wordlist.h wordcompletion.h wordcompletionwidget.h dictionarycreationwizard.h klanguagebutton.h klanguagebuttonhelper.h
