--- a/Makefile.am
+++ b/Makefile.am
@@ -7,16 +7,10 @@ SUBDIRS = icons phrasebook wordcompletion books .
 
 EXTRA_DIST = main.cpp version.h kmouth.cpp kmouth.h kmouthui.rc kmouth.desktop phraselistitem.cpp phraselistitem.h texttospeechsystem.cpp texttospeechsystem.h speech.cpp speech.h phraselist.cpp phraselist.h phraseedit.cpp phraseedit.h kmouthrc configwizard.cpp configwizard.h optionsdialog.cpp optionsdialog.h texttospeechconfigurationwidget.h texttospeechconfigurationwidget.cpp texttospeechconfigurationui.ui preferencesui.ui 
 
-install-data-local:
-	$(mkinstalldirs) $(kde_appsdir)/Applications/
-	$(INSTALL_DATA) $(srcdir)/kmouth.desktop $(kde_appsdir)/Applications/kmouth.desktop
-	$(mkinstalldirs) $(kde_confdir)/
-	$(INSTALL_DATA) $(srcdir)/kmouthrc $(kde_confdir)/kmouthrc
+kde_conf_DATA = kmouthrc
 
-uninstall-local:
-	-rm -f $(kde_appsdir)/Applications/kmouth.desktop
-	-rm -f $(kde_confdir)/kmouthrc
-
+apps_DATA = kmouth.desktop
+appsdir = $(kde_appsdir)/Applications
 
 # set the include path for X, qt and KDE
 INCLUDES= -Iphrasebook -Iwordcompletion $(all_includes)
