Added menu information
svn path=/trunk/kdeaccessibility/kmouth/; revision=261932

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -6,5 +6,12 @@ Exec=kmouth -caption "%c" %i %m
 Icon=kmouth.png
 DocPath=kmouth/index.html
 Comment=
+Comment[xx]=xxxx
 Terminal=0
 Name=KMouth
+Name[cy]=KCeg
+Name[pt_BR]=KBoca
+Name[sv]=Kmouth
+Name[xx]=xxKMouthxx
+GenericName=Speech Synthesizer Frontend
+Categories=Qt;KDE;Utility;X-KDE-More
