CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=279832

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -5,24 +5,27 @@ Name[ar]=الألمانية
 Name[az]=Almanca
 Name[be]=Нямецкая
 Name[bg]=Немски
+Name[bn]=জার্মান
 Name[br]=Alamaneg
 Name[bs]=Njemački
 Name[ca]=Alemany
-Name[cs]=Německý
+Name[cs]=Německy
+Name[cy]=Almaeneg
 Name[da]=Tysk
 Name[de]=Deutsch
 Name[el]=Γερμανικά
 Name[eo]=Germana
 Name[es]=Alemán
 Name[et]=Saksa
-Name[eu]=Alemaniera
+Name[eu]=Alemana
 Name[fa]=آلمانی
-Name[fi]=Saksa
+Name[fi]=Saksalainen
 Name[fo]=Týskt
 Name[fr]=Allemand
 Name[ga]=Gearmáinis
 Name[gl]=Alemán
 Name[he]=גרמנית
+Name[hi]= जर्मन
 Name[hr]=Njemački
 Name[hu]=Német
 Name[id]=Jerman
@@ -35,6 +38,7 @@ Name[lv]=Vācu
 Name[mi]=Reo Tiamana
 Name[mk]=Германски
 Name[mn]=Герман
+Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
 Name[nl]=Duits
@@ -47,18 +51,21 @@ Name[pt_BR]=Alemão
 Name[ro]=Germană
 Name[ru]=Немецкий
 Name[se]=Duiskkagiella
-Name[sk]=Nemecký
+Name[sk]=Nemecky
 Name[sl]=nemško
-Name[sr]=Nemački
+Name[sr]=Немачки
 Name[ss]=SiJalimane
 Name[sv]=Tyska
-Name[ta]=§º÷Áý
+Name[ta]=ஜெர்மன்
+Name[tg]=Немисӣ
 Name[th]=เยอรมัน
 Name[tr]=Almanca
 Name[uk]=Німецька
+Name[uz]=Олмонча
 Name[ven]=Mudzhemeni
 Name[vi]=Tiếng Đức 
 Name[wa]=Almand
+Name[xx]=xxGermanxx
 Name[zh_CN]=德语
 Name[zh_TW]=德語
 Name[zu]=isi-Jalimani
