--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -10,8 +10,40 @@ Comment[xx]=xxxx
 Terminal=0
 Name=KMouth
 Name[cy]=KCeg
+Name[eo]=KBuŝo
+Name[hi]=के-माउथ
 Name[pt_BR]=KBoca
 Name[sv]=Kmouth
+Name[ta]=K மவுத்
 Name[xx]=xxKMouthxx
+Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
+GenericName[ca]=Interfície per al sintetitzador de veu
+GenericName[cs]=Rozhraní hlasového synthetizátoru
+GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
+GenericName[da]=Forende til tale-synthesizer
+GenericName[de]=Oberfläche für Sprach-Synthesizer
+GenericName[en_GB]=Speech Synthesiser Frontend
+GenericName[eo]=Fasado Por Parolsintezilo
+GenericName[es]=Interfaz de usuario para sintetizador vocal
+GenericName[et]=Kõnesüntesaator
+GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
+GenericName[fr]=Interface graphique de synthèse vocale
+GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
+GenericName[hu]=Beszédszintetizátor
+GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
+GenericName[nl]=Spraaksynthesizer
+GenericName[nn]=Grensesnitt for talesyntese
+GenericName[pt]=Sintetizador de Fala
+GenericName[pt_BR]=Interface do Sintetizador de Fala
+GenericName[ru]=Интерфейс к синтезатору речи
+GenericName[sk]=Rozhranie pre syntezátor reči
+GenericName[sl]=Vmesnik za sintezo govora
+GenericName[sr]=Сучеље за ситетизатор говора
+GenericName[sv]=Gränssnitt för talsyntes
+GenericName[ta]=ஸ்பீர் சின்தசைசர் ப்ரான்டட்ச்
+GenericName[tr]=Konuşma Sentezleyici Arayüzü
+GenericName[xx]=xxSpeech Synthesizer Frontendxx
+GenericName[zh_CN]=语音合成器前端
+GenericName[zh_TW]=語音合成器前端
 Categories=Qt;KDE;Utility;X-KDE-More
