CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=283860

--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -41,11 +41,12 @@ Name[mn]=Швед
 Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
+Name[nds]=Sweedsch
 Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[nso]=Se-Swedish
 Name[oc]=Suedès
-Name[pl]=Szwedzki
+Name[pl]=Szwedzka
 Name[pt]=Sueco
 Name[pt_BR]=Suíço
 Name[ro]=Suedeză
