--- a/books/de.desktop
+++ b/books/de.desktop
@@ -41,11 +41,12 @@ Name[mn]=Герман
 Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
+Name[nds]=Hochdüütsch
 Name[nl]=Duits
 Name[nn]=Tysk
 Name[nso]=Se-German
 Name[oc]=Alemani
-Name[pl]=Niemiecki
+Name[pl]=Niemiecka
 Name[pt]=Alemão
 Name[pt_BR]=Alemão
 Name[ro]=Germană
