CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=284446

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -15,11 +15,14 @@ Name[fr]=Anglais
 Name[he]=אנגלית
 Name[hi]= अंग्रेजी
 Name[hu]=Angol
+Name[is]=Enska
 Name[it]=Inglese
+Name[ja]=英語
 Name[ms]=Inggeris
 Name[mt]=Ingliż
 Name[nl]=Engels
 Name[nn]=Engelsk
+Name[pl]=Angielska
 Name[pt]=Inglês
 Name[pt_BR]=Inglês
 Name[ro]=Engleză
