CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=285800

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -6,12 +6,14 @@ Exec=kmouth -caption "%c" %i %m
 Icon=kmouth.png
 DocPath=kmouth/index.html
 Comment=
+Comment[pl]=Program do oglądania powiększonych fragmentów ekranu
 Comment[xx]=xxxx
 Terminal=0
 Name=KMouth
 Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[hi]=के-माउथ
+Name[is]=KMunnur
 Name[pt_BR]=KBoca
 Name[sv]=Kmouth
 Name[ta]=K மவுத்
@@ -31,9 +33,12 @@ GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
+GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
+GenericName[ja]=スピーチシンセサイザフロントエンド
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
+GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
 GenericName[ru]=Интерфейс к синтезатору речи
