CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=292530

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -55,6 +55,7 @@ Name[se]=Duiskkagiella
 Name[sk]=Nemecky
 Name[sl]=nemško
 Name[sr]=Немачки
+Name[sr@Latn]=Nemački
 Name[ss]=SiJalimane
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
