--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -55,6 +55,7 @@ Name[se]=Ruoŧagiella
 Name[sk]=Švédsky
 Name[sl]=švedsko
 Name[sr]=Шведски
+Name[sr@Latn]=Švedski
 Name[ss]=SiSwidi
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
