CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=298055

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -7,6 +7,7 @@ Icon=kmouth.png
 DocPath=kmouth/index.html
 Comment=
 Comment[pl]=Program do oglądania powiększonych fragmentów ekranu
+Comment[ro]=Un utilitar de mărit zone ale ecranului
 Comment[xx]=xxxx
 Terminal=0
 Name=KMouth
@@ -14,9 +15,12 @@ Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[hi]=के-माउथ
 Name[is]=KMunnur
+Name[mn]=KМаф(КMouth)
 Name[pt_BR]=KBoca
+Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K மவுத்
+Name[tg]=Kаҳон
 Name[xx]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
@@ -31,6 +35,7 @@ GenericName[es]=Interfaz de usuario para sintetizador vocal
 GenericName[et]=Kõnesüntesaator
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
+GenericName[ga]=Clár tosaigh an sintéiseoir cainte
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
@@ -41,12 +46,15 @@ GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
+GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезатору речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Сучеље за ситетизатор говора
+GenericName[sr@Latn]=Sučelje za sitetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=ஸ்பீர் சின்தசைசர் ப்ரான்டட்ச்
+GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[xx]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
