--- a/kmouthui.rc
+++ b/kmouthui.rc
@@ -15,6 +15,8 @@
     <Action name="phrasebook_edit"/>
   </Menu>
   <Menu name="settings"><text>&amp;Settings</text>
+    <Action name="showPhrasebookBar"/>
+    <Separator />
     <Action name="configureTTS"/>
   </Menu>
 </MenuBar>
