CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=309350

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=German
 Name[af]=Duits
-Name[ar]=الألمانية
+Name[ar]=ألمانية
 Name[az]=Almanca
 Name[be]=Нямецкая
 Name[bg]=Немски
@@ -27,6 +27,7 @@ Name[gl]=Alemán
 Name[he]=גרמנית
 Name[hi]= जर्मन
 Name[hr]=Njemački
+Name[hsb]=Němsce
 Name[hu]=Német
 Name[id]=Jerman
 Name[is]=Þýska
@@ -41,7 +42,6 @@ Name[mn]=Герман
 Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
-Name[nds]=Hochdüütsch
 Name[nl]=Duits
 Name[nn]=Tysk
 Name[nso]=Se-German
