CVS_SILENT made messages
svn path=/branches/KDE_3_2_BRANCH/kdeaccessibility/kmouth/; revision=309554

--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Name=Swedish
 Name[af]=Sweedse
-Name[ar]=السويدية
+Name[ar]=سويدية
 Name[az]=İsveçcə
 Name[be]=Швэдзкая
 Name[bg]=Шведски
@@ -25,8 +25,10 @@ Name[fo]=Svenskt
 Name[fr]=Suédois
 Name[ga]=Sualainnis
 Name[gl]=Sueco
+Name[he]=שוודית
 Name[hi]=स्वीडिश
 Name[hr]=švedski
+Name[hsb]=Šwedisce
 Name[hu]=Svéd
 Name[id]=Swedia
 Name[is]=Sænska
@@ -41,7 +43,6 @@ Name[mn]=Швед
 Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
-Name[nds]=Sweedsch
 Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[nso]=Se-Swedish
