--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -11,12 +11,12 @@ Comment[ro]=Un utilitar de mărit zone ale ecranului
 Comment[xx]=xxxx
 Terminal=0
 Name=KMouth
+Name[ar]=برنامج KMouth
 Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[hi]=के-माउथ
 Name[is]=KMunnur
 Name[mn]=KМаф(КMouth)
-Name[pt_BR]=KBoca
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K மவுத்
@@ -24,6 +24,8 @@ Name[tg]=Kаҳон
 Name[xx]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
+GenericName[ar]=واجهة النَظام الصَوتي
+GenericName[bs]=Program za sintezu govora
 GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového synthetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
@@ -41,6 +43,7 @@ GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[nb]=Brukerflate for talesystem
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pl]=Program obsługujący syntezator mowy
