--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -3,21 +3,28 @@
 Encoding=UTF-8
 Type=Application
 Exec=kmouth -caption "%c" %i %m  
-Icon=kmouth.png
+Icon=kmouth
 DocPath=kmouth/index.html
 Comment=
+Comment[pl]=Program do oglądania powiększonych fragmentów ekranu
+Comment[ro]=Un utilitar de mărit zone ale ecranului
 Comment[xx]=xxxx
 Terminal=0
 Name=KMouth
+Name[ar]=برنامج KMouth
 Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[hi]=के-माउथ
-Name[pt_BR]=KBoca
+Name[is]=KMunnur
+Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K மவுத்
+Name[tg]=Kаҳон
 Name[xx]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
+GenericName[ar]=واجهة النَظام الصَوتي
+GenericName[bg]=Синтезатор на глас
 GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového synthetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
@@ -31,17 +38,23 @@ GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
+GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
+GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
+GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезатору речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Сучеље за ситетизатор говора
+GenericName[sr@Latn]=Sučelje za sitetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=ஸ்பீர் சின்தசைசர் ப்ரான்டட்ச்
+GenericName[tg]=Сухани Синтезатори Пешбуда
+GenericName[th]=ฟร้อนต์เอนด์สำหรับเครื่องสังเคราะห์คำพูด
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[xx]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
