CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=331080

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=German
 Name[af]=Duits
-Name[ar]=الألمانية
+Name[ar]=ألمانية
 Name[az]=Almanca
 Name[be]=Нямецкая
 Name[bg]=Немски
@@ -27,6 +27,7 @@ Name[gl]=Alemán
 Name[he]=גרמנית
 Name[hi]= जर्मन
 Name[hr]=Njemački
+Name[hsb]=Němsce
 Name[hu]=Német
 Name[id]=Jerman
 Name[is]=Þýska
@@ -45,7 +46,8 @@ Name[nl]=Duits
 Name[nn]=Tysk
 Name[nso]=Se-German
 Name[oc]=Alemani
-Name[pl]=Niemiecki
+Name[pa]=ਜਰਮਨ
+Name[pl]=Niemiecka
 Name[pt]=Alemão
 Name[pt_BR]=Alemão
 Name[ro]=Germană
@@ -53,7 +55,9 @@ Name[ru]=Немецкий
 Name[se]=Duiskkagiella
 Name[sk]=Nemecky
 Name[sl]=nemško
+Name[sq]=Gjermanisht
 Name[sr]=Немачки
+Name[sr@Latn]=Nemački
 Name[ss]=SiJalimane
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
