--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -2,7 +2,7 @@
 [Desktop Entry]
 Name=Swedish
 Name[af]=Sweedse
-Name[ar]=السويدية
+Name[ar]=سويدية
 Name[az]=İsveçcə
 Name[be]=Швэдзкая
 Name[bg]=Шведски
@@ -25,6 +25,7 @@ Name[fo]=Svenskt
 Name[fr]=Suédois
 Name[ga]=Sualainnis
 Name[gl]=Sueco
+Name[he]=שוודית
 Name[hi]=स्वीडिश
 Name[hr]=švedski
 Name[hu]=Svéd
@@ -45,7 +46,8 @@ Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[nso]=Se-Swedish
 Name[oc]=Suedès
-Name[pl]=Szwedzki
+Name[pa]=ਸਵੀਡਿਸ਼
+Name[pl]=Szwedzka
 Name[pt]=Sueco
 Name[pt_BR]=Suíço
 Name[ro]=Suedeză
@@ -53,7 +55,9 @@ Name[ru]=Шведский
 Name[se]=Ruoŧagiella
 Name[sk]=Švédsky
 Name[sl]=švedsko
+Name[sq]=Suedisht
 Name[sr]=Шведски
+Name[sr@Latn]=Švedski
 Name[ss]=SiSwidi
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
