CVS_SILENT made messages
svn path=/trunk/kdeaccessibility/kmouth/; revision=335412

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -1,6 +1,10 @@
 # KDE Config File  
 [Desktop Entry]
 Name=English
+Name[ar]=إنجليزية
+Name[bg]=Английски
+Name[br]=Saozneg
+Name[bs]=Engleski
 Name[ca]=Anglès
 Name[cs]=Anglicky
 Name[cy]=Saesneg
@@ -12,14 +16,19 @@ Name[es]=Inglés
 Name[et]=Inglise
 Name[fi]=Englantilainen
 Name[fr]=Anglais
+Name[gl]=Inglés
 Name[he]=אנגלית
 Name[hi]= अंग्रेजी
 Name[hu]=Angol
+Name[is]=Enska
 Name[it]=Inglese
+Name[ja]=英語
 Name[ms]=Inggeris
 Name[mt]=Ingliż
+Name[nb]=Engelsk
 Name[nl]=Engels
 Name[nn]=Engelsk
+Name[pl]=Angielska
 Name[pt]=Inglês
 Name[pt_BR]=Inglês
 Name[ro]=Engleză
@@ -27,8 +36,11 @@ Name[ru]=Английский
 Name[sk]=Anglicky
 Name[sl]=angleško
 Name[sr]=Енглески
+Name[sr@Latn]=Engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிளம்
+Name[tg]=Англисӣ
+Name[th]=อังกฤษ
 Name[tr]=İngilizce
 Name[uz]=Инглизча
 Name[xx]=xxEnglishxx
