--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -19,12 +19,13 @@ Name[is]=KMunnur
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K மவுத்
-Name[tg]=Kаҳон
+Name[tg]=KДаҳон
 Name[xx]=xxKMouthxx
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة النَظام الصَوتي
 GenericName[bg]=Синтезатор на глас
+GenericName[bs]=Program za sintezu govora
 GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového synthetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
@@ -36,10 +37,13 @@ GenericName[es]=Interfaz de usuario para sintetizador vocal
 GenericName[et]=Kõnesüntesaator
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
+GenericName[gl]=Interface de usuario para sintetizador de voz
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
+GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[nb]=Brukerflate for talesystem
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pl]=Program obsługujący syntezator mowy
@@ -49,7 +53,7 @@ GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезатору речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
-GenericName[sr]=Сучеље за ситетизатор говора
+GenericName[sr]=Сучеље за синтетизатор говора
 GenericName[sr@Latn]=Sučelje za sitetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=ஸ்பீர் சின்தசைசர் ப்ரான்டட்ச்
