--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -52,7 +52,7 @@ GenericName[ru]=Интерфейс к синтезатору речи
 GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Сучеље за синтетизатор говора
-GenericName[sr@Latn]=Sučelje za sitetizator govora
+GenericName[sr@Latn]=Sučelje za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[ta]=ஸ்பீர் சின்தசைசர் ப்ரான்டட்ச்
 GenericName[tg]=Сухани Синтезатори Пешбуда
