CVS_SILENT made messages (.desktop file)
svn path=/branches/KDE_3_3_BRANCH/kdeaccessibility/kmouth/; revision=366320

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -16,6 +16,7 @@ Name[es]=Inglés
 Name[et]=Inglise
 Name[fi]=Englantilainen
 Name[fr]=Anglais
+Name[ga]=Béarla
 Name[gl]=Inglés
 Name[he]=אנגלית
 Name[hi]= अंग्रेजी
